packages/ember-ui/addon/styles/components/dropdown.css
.dropdown-menu {
    @apply w-56 mt-2 bg-transparent rounded-md shadow-lg;
}

.dropdown-menu-content {
    @apply bg-white border border-gray-300 rounded-md shadow-md;
}

.dropdown-menu-content.context-menu {
    @apply py-2;
}

body[data-theme='dark'] .dropdown-menu-content {
    @apply bg-gray-700 border-gray-900;
}

.dropdown-menu-item {
    @apply block px-4 py-1 text-sm leading-5 text-gray-700 no-underline;
}

.dropdown-menu-item:hover {
    @apply text-gray-900 bg-gray-100;
}

.dropdown-menu-item:focus {
    @apply text-gray-900 bg-gray-100 outline-none;
}

body[data-theme='dark'] .dropdown-menu-item {
    @apply text-gray-200;
}

body[data-theme='dark'] .dropdown-menu-item:hover {
    @apply text-gray-100 bg-gray-800 shadow-inner;
}

body[data-theme='dark'] .dropdown-menu-item:focus {
    @apply text-gray-100 bg-gray-800;
}

.dropdown-manual {
    position: relative;
    display: inline-block;
  }
  
  .main-waypoint {
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 500;
  }
  
  .caret {
    font-size: 0.75rem;
    margin-left: 4px;
  }
  
  .dropdown-list {
    position: relative;
    top: 100%;
    left: 40%;
    transform: translateX(-50%);
    background: white;
    padding: 6px 12px;
    z-index: 1000;
    white-space: nowrap;
    opacity: 0;
    visibility: hidden;
    transition: all 0.3s ease-in-out;
  }
  
  .dropdown-manual .dropdown-list.transition {
    transition: all 0.3s ease-in-out;
    opacity: 1;
    visibility: visible;
  }
  
  .dropdown-list li {
    text-align: center;
    margin: 4px 0;
  }
  
  .down-arrow {
    font-size: 12px;
  }

  .ember-power-select-selected-item {
    max-width: 140px;
  }

